2003-04-23  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/DT/DTUtil.py (htmlquote): removing adding
	html breaks to replace line breaks; if users (or Drew) cry foul, 
	will revert this.

	* FAQ: typo fix.

	* pylibs/AE/cfg.py (Config.mergeDefaults): fixed typo
	that has been there forever.

2003-04-22  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/MySQL/__init__.py: cleanup of SimpleQueryTest, thanks to
	bug reports and debugging by Spruce Weber and Frank Tegtmeyer.

	* SkunkWeb/SkunkWeb/LogObj.py, pylibs/Logger.py: used the config
	object more, now that accessing it is more affordable.

	* SkunkWeb/Services/mysql/__init__.py (rollback): fixing typo 
	in the name of this method.

	* SkunkWeb/SkunkWeb/ConfigAdditives.py: remove import of scopeable. 

	* pylibs/setup-pylibs.in: removed scopeable stuff.

	* pylibs/formlib/views.py: use htmlquote for displaying text in 
	views.

2003-04-21  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/Makefile.in (exclude): removing the now deprecated
	scopeable module from the build.

2003-04-21  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/scope.py (Scopeable.pop): pop needs to check defaults 
	as well as dictlist.
	(Scopeable.currentScopes, Scopeable.trim): currentScopes() now
	returns a copy, and trim() now empties out the current scopes.

2003-04-20  Jacob Smullyan  <smulloni@smullyan.org>

	* FAQ: added item about setting temporary Configuration values.

	* pylibs/scope.py (Scopeable.updateDefaults): renamed the old
	update() method, since it wasn't named very accurately.

	* pylibs/ConfigLoader.py (loadConfig): some scope fixes,
	and comments thereon.

2003-04-19  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/MsgCatalog.py,
	SkunkWeb/Services/templating/MailServices.py,
	SkunkWeb/Services/ae_component.py, pylibs/AE/MimeTypes.py,
	pylibs/AE/Executables.py, pylibs/AE/Component.py,
	pylibs/AE/Cache.py: changed method names to be compatible with
	Scopeable.
